# spot_ros2_multi

./: CMakeLists.txt  README.md  package.xml
config_examples/: spot_gouger.yaml  spot_tusker.yaml
launch/: spot_multi.launch.py
scripts/: README_SERVICE_TRANSLATOR.md  gripper_angle_translator.py  spot_fiducial_loc.py  spot_graphnav_loc.py  spot_service_translator.py  spot_sync_drive.py  spot_sync_drive_position.py  spot_sync_tracking.py
src/: point_cloud_processor.cpp
